# restafy

./: .env.example  .env.local  README.md  middleware.ts  next.config.js  package.json  pyproject.toml  tailwind.config.js  vercel.json
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  page.tsx
app/auth/callback/: route.ts
app/auth/login/: page.tsx
app/dashboard/: page.tsx
app/restaurant/[slug]/: page.tsx
components/: DashboardStats.tsx  FloatingCart.tsx  Footer.tsx  GeoMap.tsx  HeroSection.tsx  MenuItemCard.tsx  Navbar.tsx  QualityAuditPanel.tsx  ReferralPanel.tsx  RestaurantCard.tsx
components/ui/: Badge.tsx  Button.tsx  Card.tsx  Modal.tsx
database/: schema.sql
docs/: README.md
hooks/: useCart.ts  useGeolocation.ts  userAuth.ts
lib/: cloudinary.ts  fedapay.ts  resend.ts  supabaseClient.ts
public/: manifest.json  sw.js
restafy/: __init__.py
scripts/: setup-database.sql
styles/: tokens.css
utils/: format.ts  haversine.ts
